[gd_scene load_steps=25 format=3 uid="uid://vrgxl7185qiy"]

[ext_resource type="SpriteFrames" uid="uid://bstl8yolb5enr" path="res://sprites/player_anim.tres" id="1_01bsf"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_aq5fj"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ocrkn"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_s5jgf"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 360), 0.0, 0.0, 0, 0, Vector2(1, -239.374), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ts35m"]
curve = SubResource("Curve_s5jgf")

[sub_resource type="Curve" id="Curve_8y7pg"]
max_value = 200.0
_data = [Vector2(0, 200), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5bfog"]
curve = SubResource("Curve_8y7pg")

[sub_resource type="Curve" id="Curve_dxk75"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.758047, 0.975118), 0.0, 0.0, 0, 0, Vector2(1, 0.346276), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_clabh"]
curve = SubResource("Curve_dxk75")

[sub_resource type="Curve" id="Curve_jgefp"]
max_value = 3.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_vv2j2"]
curve = SubResource("Curve_jgefp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rtlbq"]
lifetime_randomness = 0.3
particle_flag_disable_z = true
particle_flag_damping_as_friction = true
angle_curve = SubResource("CurveTexture_ts35m")
gravity = Vector3(0, -5, 0)
linear_accel_min = -48.38
linear_accel_max = -2.23517e-06
tangential_accel_min = -22.94
tangential_accel_max = 17.53
damping_max = 5.227
scale_max = 4.54
scale_curve = SubResource("CurveTexture_clabh")
scale_over_velocity_curve = SubResource("CurveTexture_vv2j2")
color = Color(0.263612, 0.154158, 0.0670519, 1)
anim_speed_curve = SubResource("CurveTexture_5bfog")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_hwo6w"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_aq0h8"]
min_value = -2.0
max_value = 2.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, -2), 0.0, 0.0, 0, 0, Vector2(1, 2), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_u6xbq"]
curve = SubResource("Curve_aq0h8")

[sub_resource type="Curve" id="Curve_r7cks"]
max_value = 2.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.859045, 0.672962), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_3jkae"]
curve = SubResource("Curve_r7cks")

[sub_resource type="Curve" id="Curve_ovw7y"]
min_value = -200.0
max_value = 200.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 99.0426), 0.0, 0.0, 0, 0, Vector2(1, 43.7234), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_cfnp1"]
curve = SubResource("Curve_ovw7y")

[sub_resource type="Curve" id="Curve_26ml1"]
max_value = 440.22
_data = [Vector2(0, 28.3875), 0.0, 0.0, 0, 0, Vector2(1e-05, 440.22), 0.0, 0.0, 0, 0, Vector2(0.712054, 213.436), 0.0, 0.0, 0, 0, Vector2(1, 111.617), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_6qyx6"]
curve = SubResource("Curve_26ml1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sx5mt"]
lifetime_randomness = 0.7
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 4
emission_point_count = 1
direction = Vector3(0.1, 0, 0)
spread = 14.268
flatness = 0.845
orbit_velocity_curve = SubResource("CurveTexture_u6xbq")
velocity_limit_curve = SubResource("CurveTexture_6qyx6")
gravity = Vector3(0, 1, 0)
tangential_accel_min = -11.27
tangential_accel_max = 12.07
tangential_accel_curve = SubResource("CurveTexture_cfnp1")
scale_min = 0.0
scale_max = 10.74
scale_curve = SubResource("CurveTexture_3jkae")
scale_over_velocity_max = 53.8
color = Color(0.375993, 0.203706, 0.0563801, 1)
anim_speed_max = 3.33
turbulence_noise_strength = 9.16
turbulence_noise_scale = 3.47
turbulence_influence_max = 0.332

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iigf8"]
radius = 32.0
height = 174.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7241j"]
size = Vector2(81, 183.375)

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
input_pickable = true
script = ExtResource("1_aq5fj")

[node name="FallingVFX" type="Node2D" parent="."]

[node name="GPUParticles2D2" type="GPUParticles2D" parent="FallingVFX"]
material = SubResource("CanvasItemMaterial_ocrkn")
position = Vector2(0, -64)
emitting = false
amount = 1000
process_material = SubResource("ParticleProcessMaterial_rtlbq")
lifetime = 1.5
one_shot = true
speed_scale = 8.83
randomness = 0.23

[node name="GPUParticles2D" type="GPUParticles2D" parent="FallingVFX"]
material = SubResource("CanvasItemMaterial_hwo6w")
position = Vector2(0, -20)
scale = Vector2(200, 200)
emitting = false
amount = 1000
process_material = SubResource("ParticleProcessMaterial_sx5mt")
lifetime = 1.5
one_shot = true
preprocess = 0.25
speed_scale = 8.83
randomness = 0.23

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -160)
sprite_frames = ExtResource("1_01bsf")
animation = &"IDLE"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -89)
shape = SubResource("CapsuleShape2D_iigf8")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -63)
shape = SubResource("RectangleShape2D_7241j")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
autostart = true

[node name="PopinTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="PopinTimer" to="." method="_on_popin_timer_timeout"]
[connection signal="timeout" from="CoyoteTime" to="." method="_on_coyote_time_timeout"]
